--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 ﻿**/obj
 **/bin
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/CopilotIndices/17.13.441.19478
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/DesignTimeBuild
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/FileContentIndex
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/TestStore/0
+*.suo
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/DocumentLayout.backup.json
+/StoreFlow.Usuarios/StoreFlow.Usuarios.API/Endpoints/UsuariosEndpoints.cs
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/DocumentLayout.json
