feat(auth): agregar autenticación JWT y actualizar configuración de pruebas
- Actualizado '.gitignore' para excluir resultados de pruebas y respaldos.
- Implementado endpoint de inicio de sesión en 'UsuariosEndpoints.cs' con generación de token JWT.
- Introducida clase 'ProveedorToken' para la gestión de tokens.
- Registrado 'ProveedorToken' como singleton en 'Program.cs'.
- Añadidas referencias de paquetes necesarias en '.csproj' para JWT y EF Core.
- Actualizadas las pruebas en 'LoginEndpointTests.cs' para validar la presencia de tokens y añadido caso de acceso no autorizado.
- Modificado 'TestApplicationFactory.cs' para incluir 'ProveedorToken' en la configuración de pruebas.
- Añadidos archivos de configuración para la cobertura de código.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/DocumentLayout.backup.json
 /StoreFlow.Usuarios/StoreFlow.Usuarios.API/Endpoints/UsuariosEndpoints.cs
 /StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/DocumentLayout.json
+/StoreFlow.Usuarios/StoreFlow.Usuarios.Tests/TestResults
+/StoreFlow.Usuarios/TestResults
