chore(gitignore): actualizar .gitignore para excluir rutas adicionales
Se agregaron entradas al archivo .gitignore para evitar el seguimiento de archivos y directorios innecesarios, incluyendo archivos de respaldo, resultados de pruebas y archivos específicos de Visual Studio. Esto ayuda a mantener un repositorio más limpio enfocado en el código fuente relevante.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/DocumentLayout.json
 /StoreFlow.Usuarios/StoreFlow.Usuarios.Tests/TestResults
 /StoreFlow.Usuarios/TestResults
+/StoreFlow.Usuarios/.vs
