chore(ci): se actualiza el contexto de build en cd.yml para Usuarios Service
- Se cambia el parámetro 'context' en el paso 'Build and push Usuarios Service' de './StoreFlow.Usuarios/StoreFlow.Usuarios.API' a '.' para ampliar el contexto de build al directorio raíz del repositorio.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -82,7 +82,7 @@ jobs:
         if: needs.detect-changes.outputs.usuarios-service == 'true'
         uses: docker/build-push-action@v4
         with:
-          context: ./StoreFlow.Usuarios/StoreFlow.Usuarios.API
+          context: .
           file: ./StoreFlow.Usuarios/StoreFlow.Usuarios.API/Dockerfile
           platforms: linux/amd64
           push: true
