chore(ci): se mejoran permisos para el job deploy-to-aks
- Se agrega una nueva sección 'permissions' en 'cd.yml' para el job 'deploy-to-aks', requiriendo permisos 'id-token: write' y 'contents: read' para mejorar la seguridad y el control de acceso durante el proceso de despliegue.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -93,6 +93,9 @@ jobs:
 
   deploy-to-aks:
     needs: [detect-changes, build-and-push]
+    permissions:
+      id-token: write
+      contents: read
     runs-on: ubuntu-latest
     if: needs.detect-changes.outputs.usuarios-service == 'true'
     steps:
