--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -93,9 +93,6 @@ jobs:
 
   deploy-to-aks:
     needs: [detect-changes, build-and-push]
-    permissions:
-      id-token: write
-      contents: read
     runs-on: ubuntu-latest
     if: needs.detect-changes.outputs.usuarios-service == 'true'
     steps:
@@ -105,11 +102,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v1
         with:
-          auth-type: 'SERVICE_PRINCIPAL'
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Check if AKS cluster exists
         id: aks-check
