chore(k8s): se actualiza la imagen del contenedor de usuarios en deployment.yaml
- Se cambia la imagen de 'fcamilob/usuariospr2:v1' a 'ghcr.io/miso-proyecto-final-grupo-20/proyectointegrador2/usuarios'.

--- a/k8s/usuarios/deployment.yaml
+++ b/k8s/usuarios/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: usuarios
-          image: fcamilob/usuariospr2:v1
+          image: ghcr.io/miso-proyecto-final-grupo-20/proyectointegrador2/usuarios
           ports:
             - containerPort: 8080
           env:
