Feature/login usuario (#10)
* feat(auth): agregar gestión de usuarios y actualizar estructura del proyecto

- Actualizado '.gitignore' para excluir archivos de Visual Studio.
- Creado 'UsuarioLoginRequest' para encapsular los datos de inicio de sesión.
- Creado 'UsuariosDbContext' para la gestión de entidades de usuario.
- Añadido enum 'TiposUsuarios' para la categorización de tipos de usuario.
- Definida clase 'Usuario' con atributos de validación.
- Generados archivos de migración para la creación de la tabla 'Usuarios'.
- Actualizado 'Program.cs' para registrar el contexto de PostgreSQL y nuevo endpoint de login.
- Eliminado el endpoint de pronóstico del clima de 'Program.cs'.
- Actualizado 'launchSettings.json' para la configuración del desarrollo local.
- Añadidas referencias de paquetes necesarias en los archivos del proyecto para EF Core y testing.
- Creado 'LoginEndpointTests' para probar la funcionalidad de inicio de sesión.
- Implementado 'TestApplicationFactory' para pruebas en memoria.
- Limpieza en el conjunto de pruebas eliminando la clase vacía 'UnitTest1'.

* feat(auth): agregar autenticación JWT y actualizar configuración de pruebas

- Actualizado '.gitignore' para excluir resultados de pruebas y respaldos.
- Implementado endpoint de inicio de sesión en 'UsuariosEndpoints.cs' con generación de token JWT.
- Introducida clase 'ProveedorToken' para la gestión de tokens.
- Registrado 'ProveedorToken' como singleton en 'Program.cs'.
- Añadidas referencias de paquetes necesarias en '.csproj' para JWT y EF Core.
- Actualizadas las pruebas en 'LoginEndpointTests.cs' para validar la presencia de tokens y añadido caso de acceso no autorizado.
- Modificado 'TestApplicationFactory.cs' para incluir 'ProveedorToken' en la configuración de pruebas.
- Añadidos archivos de configuración para la cobertura de código.

* feat(auth): actualizar autenticación y claims en 'ProveedorToken'

- Modificado 'ProveedorToken' para cambiar los claims en 'ClaimsIdentity'.
- Añadid

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 ﻿**/obj
 **/bin
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/CopilotIndices/17.13.441.19478
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/DesignTimeBuild
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/FileContentIndex
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/TestStore/0
+*.suo
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/DocumentLayout.backup.json
+/StoreFlow.Usuarios/StoreFlow.Usuarios.API/Endpoints/UsuariosEndpoints.cs
+/StoreFlow.Usuarios/.vs/StoreFlow.Usuarios/v17/DocumentLayout.json
+/StoreFlow.Usuarios/StoreFlow.Usuarios.Tests/TestResults
+/StoreFlow.Usuarios/TestResults
+/StoreFlow.Usuarios/.vs
