CI para la aplicación web y mobile actualizado

--- a/.github/workflows/ci_ui.yml
+++ b/.github/workflows/ci_ui.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'Front/**'
+      - 'UI/**'
   pull_request:
     branches: [ main ]
     paths:
-      - 'Front/**'
+      - 'UI/**'
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
@@ -17,9 +17,9 @@ jobs:
     env:
       CI: true
 
-    defaults:
-      run:
-        working-directory: UI/apps/web
+    strategy:
+      matrix:
+        app: [web, mobile] # Define the apps to build and test
 
     steps:
       - name: Checkout repository
@@ -30,81 +30,36 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: 'UI/package-lock.json'
-
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Build
-        run: npm run build -- --configuration=production
+      - name: Cache Nx workspace
+        uses: actions/cache@v4
+        with:
+          path: .nx/cache
+          key: ${{ runner.os }}-nx-${{ hashFiles('**/project.json', '**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nx-
 
-      - name: Prepare junit directory
-        run: |
-          echo "Preparing junit directory..."
-          rm -rf junit
-          mkdir -p junit
-          chmod -R 777 junit
+      - name: Build ${{ matrix.app }} app
+        run: npx nx build ${{ matrix.app }} --configuration=production
 
-      - name: Run tests
-        run: |
-          echo "Running tests..."
-          npm test -- --no-watch --no-progress --browsers=ChromeHeadless
-        continue-on-error: false
+      - name: Run tests for ${{ matrix.app }} app
+        run: npx nx test ${{ matrix.app }} --no-watch --no-progress
 
-      - name: Generate JUnit report
-        run: |
-          echo "Generating JUnit report..."
-          node generate-junit-report.js
-
-      - name: Debug file system
-        if: always()
-        run: |
-          echo "Current directory structure:"
-          find . -type d -maxdepth 2
-          
-          echo -e "\nJunit directory (if exists):"
-          ls -la junit/ || echo "junit directory not found or empty"
-          
-          echo -e "\nSearching for any XML files recursively:"
-          find . -name "*.xml" || echo "No XML files found"
-          
-          if [ -f "test-results.xml" ]; then
-            echo -e "\nFound test-results.xml in current directory"
-            cat test-results.xml | head -20
-          fi
-          
-          if [ -f "junit/test-results.xml" ]; then
-            echo -e "\nFound test-results.xml in junit directory"
-            cat junit/test-results.xml | head -20
-          fi
-
-      - name: Upload test results
+      - name: Upload test results for ${{ matrix.app }} app
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: test-results
-          path: 'ui/app/junit/test-results.xml'
+          name: ${{ matrix.app }}-test-results
+          path: 'dist/test-results/${{ matrix.app }}/**/*.xml'
           if-no-files-found: warn
-          retention-days: 7
 
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v4
-        if: always()
-        with:
-          report_paths: 'ui/app/junit/test-results.xml'
-          fail_on_failure: false
-          require_tests: true
-          check_name: 'UI Test Results'
-
-      - name: Archive build
+      - name: Archive build for ${{ matrix.app }} app
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: ui-build
-          path: ui/app/dist/
+          name: ${{ matrix.app }}-build
+          path: dist/apps/${{ matrix.app }}/
           retention-days: 7
