--- a/UI/package.json
+++ b/UI/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "prepare": "husky install",
     "test": "nx test",
     "prettier": "prettier --write ."
   },
@@ -40,7 +39,7 @@
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.2.4",
-    "husky": "^8.0.3",
+
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
@@ -76,6 +75,9 @@
     "@nxext/capacitor": "^19.1.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.3"
+  },
+  "optionalDependencies": {
+  "@nx/nx-linux-x64-gnu": "19.3.0"
   },
   "workspaces": [
     "./apps/*"
