se elimina UI/package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /StoreFlow.Usuarios/StoreFlow.Usuarios.Tests/TestResults
 /StoreFlow.Usuarios/TestResults
 /StoreFlow.Usuarios/.vs
+UI/package-lock.json
