--- a/UI/apps/web/project.json
+++ b/UI/apps/web/project.json
@@ -5,6 +5,12 @@
   "prefix": "app",
   "sourceRoot": "apps/web/src",
   "tags": [],
+  "i18n": {
+    "sourceLocale": "es-CO",
+    "locales": {
+      "en-US": "apps/web/src/locale/messages.en-US.xlf"
+    }
+  },
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
@@ -13,7 +19,7 @@
         "outputPath": "dist/apps/web",
         "index": "apps/web/src/index.html",
         "browser": "apps/web/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": ["zone.js", "@angular/localize/init"],
         "tsConfig": "apps/web/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -29,6 +35,9 @@
         "scripts": []
       },
       "configurations": {
+        "en-US": {
+          "localize": ["en-US"]
+        },
         "production": {
           "budgets": [
             {
@@ -67,7 +76,8 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "web:build"
+        "buildTarget": "web:build",
+        "outputPath": "apps/web/src/locale"
       }
     },
     "lint": {
