--- a/UI/package.json
+++ b/UI/package.json
@@ -17,6 +17,7 @@
     "@angular/cli": "~18.2.0",
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
+    "@angular/localize": "^18.2.0",
     "@angular/material": "^18.2.0",
     "@capacitor/cli": "^7.1.0",
     "@eslint/js": "^9.8.0",
@@ -40,7 +41,7 @@
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.2.4",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
@@ -73,7 +74,9 @@
     "@capacitor/splash-screen": "^7.0.0",
     "@capacitor/status-bar": "^7.0.0",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.1.0",
+    "@ngrx/signals": "^18.1.1",
     "@nxext/capacitor": "^19.1.2",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.3"
   },
