chore(k8s): se actualizan configuraciones de Kubernetes y .gitignore
- Se mejora el archivo .gitignore para excluir archivos de Terraform y resultados de pruebas.
- Se modifica service.yaml para agregar anotaciones del Azure Load Balancer y una IP estática.
- Se crea deployment-cliente-web.yaml para el despliegue de la aplicación cliente-web.
- Se crea service-cliente-web.yaml para el servicio cliente-web como LoadBalancer.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /StoreFlow.Usuarios/TestResults
 /StoreFlow.Usuarios/.vs
 UI/package-lock.json
+/Infraestructura/.terraform
+/Infraestructura/.terraform.lock.hcl
