--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,6 +46,10 @@ jobs:
         with:
           filters: |
             usuarios-service:
+            cliente-web-service:
+              - 'ClienteWeb/**'
+              - 'ClienteWeb/Dockerfile'
+
               - 'StoreFlow.Usuarios/StoreFlow.Usuarios.API/**'
               - 'StoreFlow.Usuarios/StoreFlow.Usuarios.API/Dockerfile'
               - 'docker-compose.yaml'
@@ -76,7 +80,20 @@ jobs:
       - name: Set lowercase image prefix and version
         run: |
           echo "LOWERCASE_PREFIX=$(echo ${{ env.IMAGE_PREFIX }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-          echo "VERSION=$(date +'%Y-%m-%d-%H%M')" >> $GITHUB_ENV
+          echo "VERSION=${{ github.sha }}" >> $GITHUB_ENV
+
+      - name: Build and push Cliente Web
+        if: needs.detect-changes.outputs.should_build_all == 'true' || needs.detect-changes.outputs.cliente-web-service == 'true'
+        uses: docker/build-push-action@v4
+        with:
+          context: ./UI
+          file: ./UI/apps/web/Dockerfile
+          platforms: linux/amd64
+          push: true
+          provenance: false
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/cliente-web:${{ env.VERSION }}
+            ${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/cliente-web:latest
 
       - name: Build and push Usuarios Service
         if: needs.detect-changes.outputs.usuarios-service == 'true'
@@ -99,7 +116,7 @@ jobs:
       - name: Set lowercase image prefix and version
         run: |
           echo "LOWERCASE_PREFIX=$(echo ${{ env.IMAGE_PREFIX }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-          echo "VERSION=$(date +'%Y-%m-%d-%H%M')" >> $GITHUB_ENV
+          echo "VERSION=${{ github.sha }}" >> $GITHUB_ENV
 
       - name: Azure Login
         uses: azure/login@v1
@@ -120,6 +137,11 @@ jobs:
         run: |
           az aks get-credentials --resource-group ${{ env.AKS_RESOURCE_GROUP }} --name ${{ env.AKS_CLUSTER_NAME }} --admin --overwrite-existing
 
+      - name: Update cliente-web image in AKS
+        if: env.AKS_EXISTS == 'true' && needs.detect-changes.outputs.cliente-web-service == 'true'
+        run: |
+          kubectl set image deployment/cliente-web cliente-web=${{ env.REGISTRY }}/${{ env.LOWERCASE_PREFIX }}/cliente-web:${{ env.VERSION }} -n storeflow
+
       - name: Update usuarios image in AKS
         if: env.AKS_EXISTS == 'true' && needs.detect-changes.outputs.usuarios-service == 'true'
         run: |
@@ -134,6 +156,17 @@ jobs:
       - name: Set lowercase repository name
         run: |
           echo "REPO_NAME=$(echo ${{ github.event.repository.name }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      - name: Delete old Cliente Web images
+        if: needs.detect-changes.outputs.cliente-web-service == 'true'
+        continue-on-error: true
+        uses: actions/delete-package-versions@v4
+        with:
+          package-name: '${{ env.REPO_NAME }}/cliente-web'
+          package-type: 'container'
+          min-versions-to-keep: 3
+          delete-only-untagged-versions: false
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Delete old Usuarios images
         if: needs.detect-changes.outputs.usuarios-service == 'true'
