chore(ci): se actualiza cd.yml con nuevos filtros de paths y contexto de build
- Se modifican los filtros de paths para 'usuarios-service' para incluir la API de StoreFlow.Usuarios.
- Se elimina el filtro de paths para 'cliente-web-service'.
- Se actualiza el contexto de build para 'Cliente Web' según la nueva estructura de rutas del Dockerfile.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,13 +46,11 @@ jobs:
         with:
           filters: |
             usuarios-service:
+                - 'StoreFlow.Usuarios/StoreFlow.Usuarios.API/**'
+                - 'StoreFlow.Usuarios/StoreFlow.Usuarios.API/Dockerfile'
             cliente-web-service:
-              - 'ClienteWeb/**'
-              - 'ClienteWeb/Dockerfile'
-
-              - 'StoreFlow.Usuarios/StoreFlow.Usuarios.API/**'
-              - 'StoreFlow.Usuarios/StoreFlow.Usuarios.API/Dockerfile'
-              - 'docker-compose.yaml'
+                - 'UI/**'
+                - 'UI/apps/web/Dockerfile'
 
   build-and-push:
     needs: detect-changes
@@ -87,7 +85,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./UI
-          file: ./UI/apps/web/Dockerfile
+          file: ./ClienteWeb/apps/web/Dockerfile
           platforms: linux/amd64
           push: true
           provenance: false
