chore(ci): se actualiza ruta del Dockerfile para el build de Cliente Web
- Se cambia la ruta del Dockerfile en el archivo 'cd.yml' para el job 'Build and push Cliente Web'.
- La ruta anterior ('./ClienteWeb/apps/web/Dockerfile') se reemplaza por la nueva ('./UI/apps/web/Dockerfile') para reflejar la reestructuración del directorio del proyecto.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -85,7 +85,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./UI
-          file: ./ClienteWeb/apps/web/Dockerfile
+          file: ./UI/apps/web/Dockerfile
           platforms: linux/amd64
           push: true
           provenance: false
