chore(ci): se agrega output para cliente-web-service y se actualiza imagen del contenedor
- Se agrega el output 'cliente-web-service' al job 'detect-changes' en 'cd.yml' para controlar el build basado en flags.
- Se actualiza la imagen del contenedor 'cliente-web' en 'deployment-cliente-web.yaml' para usar la última versión desde un nuevo repositorio.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,7 @@ jobs:
     outputs:
       should_build_all: ${{ steps.set-build-all.outputs.should_build_all }}
       usuarios-service: ${{ steps.set-build-all.outputs.should_build_all == 'true' || steps.filter.outputs.usuarios-service }}
+      iente-web-service: ${{ steps.set-build-all.outputs.should_build_all == 'true' || steps.filter.outputs.cliente-web-service }}
     steps:
       - name: Set build all flag
         id: set-build-all
