feat(k8s): se crean ingress para usuarios y aplicación web y se ajustan servicios
- Se crean los recursos ingress para los servicios de 'usuarios' y 'aplicación web'.
- Se ajustan los servicios de 'usuarios' y 'cliente web' para que no expongan direcciones IP públicas.

--- a/k8s/usuarios/service.yaml
+++ b/k8s/usuarios/service.yaml
@@ -3,11 +3,8 @@ kind: Service
 metadata:
   name: usuarios
   namespace: storeflow
-  annotations:
-    service.beta.kubernetes.io/azure-load-balancer-resource-group: aks-network-core
 spec:
-  type: LoadBalancer
-  loadBalancerIP: 52.165.24.37
+  type: ClusterIP
   selector:
     app: usuarios
   ports:
