--- a/k8s/web/service-cliente-web.yaml
+++ b/k8s/web/service-cliente-web.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cliente-web
   namespace: storeflow
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: cliente-web
   ports:
