--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /StoreFlow.Usuarios/TestResults
 /StoreFlow.Usuarios/.vs
 UI/package-lock.json
+/Infraestructura/.terraform
+/Infraestructura/.terraform.lock.hcl
+
