--- a/k8s/web/service-cliente-web.yaml
+++ b/k8s/web/service-cliente-web.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: usuarios
+  name: cliente-web
   namespace: storeflow
 spec:
   type: ClusterIP
   selector:
-    app: usuarios
+    app: cliente-web
   ports:
-    - port: 80
-      targetPort: 8080
+    - protocol: TCP
+      port: 80
+      targetPort: 80
