--- a/UI/package.json
+++ b/UI/package.json
@@ -43,7 +43,7 @@
 
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.4.0",
+    "jest-preset-angular": "14.5.4",
     "lint-staged": "^15.5.0",
     "nx": "19.3.0",
     "prettier": "^3.5.3",
