--- a/UI/package.json
+++ b/UI/package.json
@@ -16,6 +16,7 @@
     "@angular/cli": "~18.2.0",
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
+    "@angular/localize": "^18.2.0",
     "@angular/material": "^18.2.0",
     "@capacitor/cli": "^7.1.0",
     "@eslint/js": "^9.8.0",
@@ -42,7 +43,7 @@
 
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "~14.4.0",
+    "jest-preset-angular": "14.5.4",
     "lint-staged": "^15.5.0",
     "nx": "19.3.0",
     "prettier": "^3.5.3",
@@ -72,7 +73,9 @@
     "@capacitor/splash-screen": "^7.0.0",
     "@capacitor/status-bar": "^7.0.0",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.1.0",
+    "@ngrx/signals": "^18.1.1",
     "@nxext/capacitor": "^19.1.2",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.3"
   },
