--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,11 @@ services:
       POSTGRES_DB: usuarios
     ports:
         - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   usuarios:
     build: 
@@ -18,5 +23,15 @@ services:
       - .env
     ports:
       - '8090:8080' 
-    depends_on: 
-          - 'dbusuarios'
+    depends_on:
+      dbusuarios:
+        condition: service_healthy
+    
+  mobileapp:
+    build:
+      context: ./UI
+      dockerfile: apps/mobile/Dockerfile
+    ports:
+      - '8100:80'
+    depends_on:
+      - 'usuarios'
