--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,14 +91,6 @@ jobs:
       - name: install dotnet tool ef
         run: dotnet tool install --global dotnet-ef
 
-      # - name: Run dotnet db ensure created
-      #   env:
-      #     CONNECTION_STRING: ${{ secrets.CONNECTIONSTRINGS__VENTAS }}
-      #     RABBITMQ_HOST: localhost
-      #     ELASTIC_URI: http://localhost:9200
-      #     ELASTIC_APM_URI: http://localhost:8200
-      #   run: dotnet ef database update --project experimento-hu012-ha10/Ventas/Ventas.csproj --context ApplicationDbContext --connection "${{ secrets.CONNECTIONSTRINGS__VENTAS }}"
-  
       # Remove the coverlet tool installation as we'll use the built-in collector
       
       - name: Test projects with coverage
@@ -116,11 +108,21 @@ jobs:
               echo "Testing $project with coverage"
               project_name=$(basename "$project" .csproj)
               
-              # Run tests with coverage using simpler approach
+              # Run tests with coverage
               dotnet test "$project" --configuration Release --no-build --no-restore \
                 --logger "trx;LogFileName=$(pwd)/TestResults/${project_name}.trx" \
                 --collect:"XPlat Code Coverage" \
                 --results-directory "$(pwd)/TestResults"
+            fi
+          done
+          
+          # Find and move/rename coverage files for easier processing
+          echo "Processing coverage files..."
+          for coverageDir in $(find TestResults -type d -name '*' | grep -v "^TestResults$"); do
+            if [ -f "$coverageDir/coverage.cobertura.xml" ]; then
+              dirName=$(basename "$coverageDir")
+              cp "$coverageDir/coverage.cobertura.xml" "TestResults/$dirName.cobertura.xml"
+              echo "Copied coverage file to TestResults/$dirName.cobertura.xml"
             fi
           done
           
@@ -134,7 +136,7 @@ jobs:
           echo "Test results files:"
           find . -name "*.trx" | sort
           echo "Coverage results files:"
-          find . -name "coverage.cobertura.xml" | sort
+          find . -name "*.cobertura.xml" | sort
 
       - name: Publish Test Results
         uses: dorny/test-reporter@v1
@@ -151,11 +153,11 @@ jobs:
       - name: Generate Coverage Report
         if: always()
         run: |
-          reportgenerator -reports:"**/TestResults/*.coverage.cobertura.xml" -targetdir:"TestResults/CoverageReport" -reporttypes:Html
+          reportgenerator -reports:"TestResults/*.cobertura.xml" -targetdir:"TestResults/CoverageReport" -reporttypes:Html
           
       - name: Archive Code Coverage Results
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report
           path: TestResults/CoverageReport
@@ -164,7 +166,7 @@ jobs:
         uses: irongut/CodeCoverageSummary@v1.3.0
         if: always()
         with:
-          filename: "**/TestResults/*.coverage.cobertura.xml"
+          filename: "TestResults/*.cobertura.xml"
           badge: true
           format: markdown
           output: both
